src/main/resources/cpp/tests/neg/N07_void_return_with_value.cpp
void f() {
    return 1; // Fehler: return mit Wert in void-Funktion
}

int main() {
    f();

    return 0;
}
